###############################################################################
## NEWS to package MKmisc
###############################################################################

###########################################################
## Version 0.999
###########################################################
- adden new function thyroid for plotting TSH, fT3, fT4
- removed upper bound n = 100 in modified wilson confidence interval
  (thanks to Andri Signorell for detecting this inconsistency)

###########################################################
## Version 0.998
###########################################################
- extended function normCI - now mean or sd can be known
- added print function for confidence intervals

###########################################################
## Version 0.997
###########################################################
- added function risks to compute RR, OR, etc.
- added function rrCI to compute an approximate confidence interval for the
  relative risk (RR).

###########################################################
## Version 0.996
###########################################################
- extended function or2rr
- added function normCI for computing confidence intervals for mean and sd
  of a normal distribution

###########################################################
## Version 0.995
###########################################################
- added function sIQR for computing standardized IQR

###########################################################
## Version 0.994
###########################################################
- added function power.nb.test for computing sample size or power for comparing
  two negative binomial rates

###########################################################
## Version 0.993
###########################################################
- added function madCI for computing confidence intervals for MAD
