@@ -7,6 +7,7 @@ export(simCorVars,
        mi.t.test,
        ssize.pcc,
        predValues,
+       perfMeasures,
        quantileCI,
        medianCI,
        madCI,
